# nezoba

./: .gitignore  MANIFEST.in  README.md  dist.ignore  main-pyinstaller.py  pyproject.toml  requirements.txt
hw/case/: .gitignore  README.md  case-2.blend  case-bottom-2.stl  case-bottom-narrow.stl  case-bottom-wide.stl  case-top-2.stl  case-top-narrow.stl  case-top-wide.stl  case.blend  clip.stl
hw/kicad/: .gitignore  README.md
hw/kicad/libs/: nez-symbols.dcm  nez-symbols.lib
hw/kicad/nez-oba/: fp-lib-table  nez-oba-cache.lib  nez-oba.kicad_pcb  nez-oba.pro  nez-oba.sch  sym-lib-table
src/: README.md
src/board/: README.md  board.ino  debug.h  globals.h  key_handler.h  keys.h  main_loop.h  mcp.h  remap00.h  remap01.h  remap02.h  remap03.h  remap04.h  remap05.h  remap06.h  remap07.h  remap08.h  remap09.h  remap10.h  remap13.h  setup.h
src/data/: platformers-2d.yaml
src/libs/: HID-Project.h.patch
src/nezoba/: README.md  deployer.py  nezoba.py  shell.py
src/nezoba/gui/: README.md  gui.py  model.py  panes.py  utils.py  views.py  widgets.py
src/nezoba/remapper/: GUI-programming.txt  README.md  buttons.py  combos.py  encoding.py  keys.py  mappings.py  namings.py  serialization.py
test/: .gitignore
test/board/: README.md  stubs.cpp  test.cpp
test/nezoba/: .gitignore  README.md  pytest.ini  test_shell.script  test_shell.sh
test/nezoba/gui/: context.py  test_utils.py
test/nezoba/remapper/: context.py  test_buttons.py  test_combos.py  test_encoding.py  test_keys.py  test_mappings.py  test_namings.py  test_serialization.py
(+10 files in other folders)
